tests/errors/test_04.xpp
// Identifier declared void

fn sigma(x: void) void {}

fn main() void {
	let x: void;
}
